--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
   <div class="slideshow-container">
     <!-- Add your college images here -->
     <div class="slides">
-      <img src=".vscode/mmm.jpg" alt="College Image 1">
+      <img src="https://drive.google.com/file/d/1CPdQ9SkSmJiX4mEROQ1rVQv2IkauljOO/view" alt="College Image 1">
     </div>
     <div class="slides">
       <img src=".vscode/img2.jpg" alt="College Image 2">
