--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>HOOORNYYYYY ME</title>
+  <title>MMMUT RESOURCES</title>
   <style>
     body {
       margin: 0;
@@ -146,7 +146,7 @@
   <div class="slideshow-container">
     <!-- Add your college images here -->
     <div class="slides">
-      <img src="https://drive.google.com/file/d/1CPdQ9SkSmJiX4mEROQ1rVQv2IkauljOO/view" alt="College Image 1">
+      <img src="https://www.addressguru.in/images/1677657152.png" alt="College Image 1">
     </div>
     <div class="slides">
       <img src=".vscode/img2.jpg" alt="College Image 2">
