--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@
       <img src="https://www.addressguru.in/images/1677657152.png" alt="College Image 1">
     </div>
     <div class="slides">
-      <img src=".vscode/img2.jpg" alt="College Image 2">
+      <img src="https://www.addressguru.in/images/1677657136.png" alt="College Image 2">
     </div>
     <div class="slides">
-      <img src=".vscode/img3.jpg" alt="College Image 3">
+      <img src="https://www.addressguru.in/images/1741453624.jpg" alt="College Image 3">
     </div>
     <div class="slides">
-        <img src=".vscode/img4.jpg" alt="mmmut images">
+        <img src="https://staticimg.amarujala.com/assets/images/2022/01/25/mmmut_1643098251.png?w=414&dpr=1.0" alt="mmmut images">
     </div>
     <div class="slides">
-        <img src=".vscode/img5.jpg" alt="mmmut images">
+        <img src="https://www.mmmut.ac.in/images/sp1.jpg" alt="mmmut images">
     </div>
     <div class="slides">
-        <img src=".vscode/img6.jpeg" alt="mmmut images">
+        <img src="https://www.mmmut.ac.in/images/csa6.jpg" alt="mmmut images">
     </div>
 
     <!-- Navigation arrows -->
